--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,8 +1,24 @@
 <h1>{{title}}</h1>
 <p>Welcome to {{title}}</p>
 
-<ul>
-{{#each users}}
-<li>User: {{ this.username}}</li>
+<header>
+    <img src="/public/images/Captura de pantalla 2021-11-19 a las 15.45.40.png">
+</header>
+
+<a href="link meme list"/>Meme List</a>
+
+<div class="MagicScroll" data-options="mode: animation; draggable: true;">
+    <a><img src="..."/></a>
+    <a><img src="..."/></a>
+    ...
+</div>
+
+<img src="/public/images/Captura de pantalla 2021-11-19 a las 15.45.40.png">
+
+
+
+{{!-- <ul>
+{{#each meme}}
+<li>img: {{ this.img}}</li>
 {{/each}}
-</ul>
+</ul> --}}
