--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,19 +1,24 @@
+<header>
+        <img src="/images/Captura de pantalla 2021-11-19 a las 15.45.40.png">
+</header>
+
 <h1>{{title}}</h1>
 <p>Welcome to {{title}}</p>
 
-<header>
-    <img src="/public/images/Captura de pantalla 2021-11-19 a las 15.45.40.png">
-</header>
-
 <a href="link meme list"/>Meme List</a>
 
-<div class="MagicScroll" data-options="mode: animation; draggable: true;">
-    <a><img src="..."/></a>
-    <a><img src="..."/></a>
-    ...
+<div class="horizontal-scroll-wrapper squares">
+  <div>item 1</div>
+  <div>item 2</div>
+  <div>item 3</div>
+  <div>item 4</div>
+  <div>item 5</div>
+  <div>item 6</div>
+  <div>item 7</div>
+  <div>item 8</div>
 </div>
 
-<img src="/public/images/Captura de pantalla 2021-11-19 a las 15.45.40.png">
+{{!-- <img src="/public/images/Captura de pantalla 2021-11-19 a las 15.45.40.png"> --}}
 
 
 
