--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -6,9 +6,9 @@
     <title>{{title}}</title>
     <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
-  {{navBar}}
+  {{>navBar}}
   <body>
     {{{body}}}
   </body>
-  {{footer}}
+  {{>footer}}
 </html>
