--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -33,6 +33,23 @@ nav > ul > li > a {
   text-decoration: none;
 }
 
+/* horizontal scrolling*/
+.horizontal-scroll-wrapper {
+  width: 100px;
+  height: 300px;
+  overflow-y: auto;
+  overflow-x: hidden;
+  transform:rotate(-90deg) translateY(-100px);
+  transform-origin: right top;
+}
+.horizontal-scroll-wrapper > div {
+  width: 100px;
+  height: 100px;
+  transform: rotate(90deg);
+  transform-origin: right top;
+}
+
+
 /* FOOTER */
 .footer-basic {
   padding:40px 0;
