--- a/views/partials/navBar.hbs
+++ b/views/partials/navBar.hbs
@@ -3,7 +3,7 @@
     <a href="#" class="brand-logo right">MEMETICS</a>
     <ul id="nav-mobile" class="left hide-on-med-and-down">
       <li><a href="/">Home</a></li>
-      // pendiente condicional
+      {{! pendiente condicional }}
       <li><a href="/login">Log In/Log Out</a></li>
       <li><a href="/profile">Name</a></li>
     </ul>
