minor changes done

--- a/views/signup-form.hbs
+++ b/views/signup-form.hbs
@@ -1,3 +1,4 @@
+<span>Signup</span>
 <form action='/users/signup' method='post'>
   <label for='username'>Username:</label>
   <input required type='text' name='username' placeholder='choose a username' />
