--- a/views/login-form.hbs
+++ b/views/login-form.hbs
@@ -1,4 +1,5 @@
-<form action='/user/login' method='post'>
+<span>Login</span>
+<form action='/users/login' method='post'>
 
   <label for='username'>Username:</label>
   <input required type='text' name='email' placeholder='type your username' />
