--- a/views/partials/navBar.hbs
+++ b/views/partials/navBar.hbs
@@ -4,8 +4,8 @@
     <ul id="nav-mobile" class="left hide-on-med-and-down">
       <li><a href="/">Home</a></li>
       {{! pendiente condicional }}
-      <li><a href="/login">Log In/Log Out</a></li>
-      <li><a href="/profile">Name</a></li>
+      <li><a href="/users/login">Log In/Log Out</a></li>
+      <li><a href="/users/profile">Name</a></li>
     </ul>
   </nav>
 </nav>
