--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,6 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{{title}}</title>
     <link rel="stylesheet" href="/stylesheets/style.css" />
+    <link rel="stylesheet" href="/libs/glide/glide.core.min.css" />
+    <link rel="stylesheet" href="/libs/glide/glide.theme.min.css" />
   </head>
   {{>navBar}}
   <body>
@@ -17,4 +19,5 @@
 
   {{>footer}}
 
+   <link rel="stylesheet" href="/stylesheets/style.css" />
 </html>
