--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,12 @@
 body {
-  padding: 50px;
-  font: 14px 'Lucida Grande', Helvetica, Arial, sans-serif;
+  padding: 0%;
+  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background-image: utl("/images/photo-1563223566-f731efbdbab0.jpeg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  background-color: #464646;
 }
 
 a {
@@ -9,8 +15,8 @@ a {
 
 /* NavBar */
 nav {
-  background-color: #333;
-  margin: 5%;
+  background-color: #1b1b1b;
+  margin: 1%;
   overflow: hidden;
 }
 nav ul {
@@ -26,90 +32,35 @@ nav ul li {
 /* Create a style for the first level items */
 nav > ul > li > a {
   color: #aaa;
-  background-color: #ff0;
+  background-color: rgb(245, 245, 24);
   display: block;
   line-height: 2em;
   padding: 0.5em 0.5em;
   text-decoration: none;
 }
 
-/* horizontal scrolling*/
-.horizontal-scroll-wrapper {
-  width: 100px;
-  height: 300px;
-  overflow-y: auto;
-  overflow-x: hidden;
-  transform: rotate(-90deg) translateY(-100px);
-  transform-origin: right top;
-}
-.horizontal-scroll-wrapper > div {
-  width: 100px;
-  height: 100px;
-  transform: rotate(90deg);
-  transform-origin: right top;
+.logo-index {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
+/* horizontal scrolling*/
 .glide__track {
   height: 55%;
 }
 
 /* FOOTER */
 .footer-basic {
-  padding: 40px 0;
-  background-color: #ffffff;
+  padding: 5%;
+  background-color: #1b1b1b;
   color: #4b4c4d;
 }
 
-.footer-basic ul {
-  padding: 0;
-  list-style: none;
-  text-align: center;
-  font-size: 18px;
-  line-height: 1.6;
-  margin-bottom: 0;
-}
-
-.footer-basic li {
-  padding: 0 10px;
-}
-
-.footer-basic ul a {
-  color: inherit;
-  text-decoration: none;
-  opacity: 0.8;
-}
-
-.footer-basic ul a:hover {
-  opacity: 1;
-}
-
-.footer-basic .social {
-  text-align: center;
-  padding-bottom: 25px;
-}
-
-.footer-basic .social > a {
-  font-size: 24px;
-  width: 40px;
-  height: 40px;
-  line-height: 40px;
-  display: inline-block;
-  text-align: center;
-  border-radius: 50%;
-  border: 1px solid #ccc;
-  margin: 0 8px;
-  color: inherit;
-  opacity: 0.75;
-}
-
-.footer-basic .social > a:hover {
-  opacity: 0.9;
-}
-
 .footer-basic .copyright {
-  margin-top: 15px;
+  margin-top: 1%;
   text-align: center;
-  font-size: 13px;
+  font-size: 0.8rem;
   color: #aaa;
   margin-bottom: 0;
 }
