--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,9 +1,9 @@
-<header>
-        <img src="/images/Captura de pantalla 2021-11-19 a las 15.45.40.png">
-</header>
+{{!-- <h1>{{title}}</h1> --}}
 
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<header class="logo-index">
+<p>Welcome to</p>
+        <img src="/images/MEMETICS LOGO.png">
+</header>
 
 <a href="link meme list"/>Meme List</a>
 
