--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,5 +1,5 @@
 <footer class="footer-basic">
-  <div class="social"><a href="#"><i
+  {{! <div class="social"><a href="#"><i
         class="icon ion-social-instagram"
       ></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a
       href="#"
@@ -12,6 +12,6 @@
     <li class="list-inline-item"><a href="#">About</a></li>
     <li class="list-inline-item"><a href="#">Terms</a></li>
     <li class="list-inline-item"><a href="#">Privacy Policy</a></li>
-  </ul>
+  </ul> }}
   <p class="copyright">MEMETICS © 2021</p>
 </footer>
