--- a/views/partials/navBar.hbs
+++ b/views/partials/navBar.hbs
@@ -1,6 +1,6 @@
 <nav>
   <nav class="nav-wrapper">
-    <a href="#" class="brand-logo right">MEMETICS</a>
+    {{! <a href="#" class="brand-logo right">MEMETICS</a> }}
     <ul id="nav-mobile" class="left hide-on-med-and-down">
       <li><a href="/">Home</a></li>
       {{! pendiente condicional }}
