--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,11 +1,11 @@
 {{!-- <h1>{{title}}</h1> --}}
 
 <header class="logo-index">
-<p>Welcome to</p>
+<h3>Welcome to</h3>
         <img src="/images/MEMETICS LOGO.png">
 </header>
 
-<a href="link meme list"/>Meme List</a>
+<h2><a href="link meme list"/>Meme List</a></h2>
 
 <!-- https://glidejs.com/docs/options/ -->
 <div class="glide">
@@ -40,6 +40,22 @@
   </div>
   
 </div>
+
+<section class="tutorial">
+    <h2>How do a meme</h2>
+    <div>
+        <p>Select meme image of <a href="link meme list"/>Meme List</a></p>
+        <img src="/images/2021-11-20.png">
+    </div>
+    <div>
+        <p>Edit text and save your meme</a></p>
+        <img src="/images/2021-11-20 (3).png">
+    </div>
+    <div>
+        <p>Download and share your meme</p>
+        <img src="/images/2021-11-20 (4).png">
+    </div>
+</section>
 
 {{!-- <img src="/public/images/Captura de pantalla 2021-11-19 a las 15.45.40.png"> --}}
 
