--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,4 @@
 body {
-  padding: 0%;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   background-image: url("/images/photo-1563223566-f731efbdbab0.jpeg");
   background-position: center center;
@@ -7,17 +6,31 @@ body {
   background-attachment: fixed;
   background-size: cover;
   background-color: #464646;
+  padding: 0;
+  margin: 0;
 }
 
 a {
   color: #00b7ff;
 }
 
+/* Main */
+main {
+  padding: 90px 10px 45px 10px;
+}
 /* NavBar */
 nav {
+  align-items: center;
   background-color: #1b1b1b;
-  margin: 1%;
-  overflow: hidden;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  left: 0;
+  padding: 10px;
+  position: fixed;
+  right: 0;
+  top: 0;
+  z-index: 10;
 }
 nav ul {
   margin: 0;
@@ -27,6 +40,7 @@ nav ul li {
   /* This allow us to arrange list items in a row, without using float */
   display: inline-block;
   list-style-type: none;
+  vertical-align: middle;
 }
 
 /* Create a style for the first level items */
@@ -37,6 +51,43 @@ nav > ul > li > a {
   line-height: 2em;
   padding: 0.5em 0.5em;
   text-decoration: none;
+}
+
+.nav-links {
+  background: none;
+}
+
+.nav-links-item a {
+  color: white;
+  background: none;
+  cursor: pointer;
+}
+
+.nav-links-item a:hover {
+  font-weight: bold;
+  text-decoration: underline;
+}
+.nav-profile {
+  width: 16px;
+  height: 16px;
+  display: block;
+  background: rgba(200, 0, 0, 0.8);
+  color: white;
+  font-weight: bold;
+  text-align: center;
+  /* padding-top: 0; */
+  font-size: 20px;
+  line-height: 16px;
+  border: 2px solid white;
+  cursor: pointer;
+  transition: all 250ms ease-in-out;
+  box-shadow: 0px 0px 0px 0px white;
+  border-radius: 50%;
+}
+
+.nav-profile:hover {
+  background: rgba(200, 0, 0, 1);
+  box-shadow: 0px 0px 10px 0px hsl(0deg 0% 100% / 80%);
 }
 
 .logo-index {
@@ -56,15 +107,19 @@ nav > ul > li > a {
 }
 
 .glide__track li {
-  height: 200;
+  height: 200px;
   width: auto;
   overflow: hidden;
   position: relative;
 }
 
 .glide__track img {
-  position: absolute;
+  display: block;
+  height: 200px;
   object-fit: cover;
+  object-position: center;
+  position: absolute;
+  width: 100%;
 }
 
 /* Start Tutorial */
@@ -73,12 +128,25 @@ nav > ul > li > a {
   flex-direction: column;
   align-items: center;
 }
+.tutorial-item {
+  width: 100%;
+  text-align: center;
+}
+.tutorial-item img {
+  width: 100%;
+  max-width: max-content;
+  display: block;
+  margin: 0 auto;
+}
 .tutorial h2 {
   color: aliceblue;
+  width: 100%;
   text-shadow: 2px 2px 4px #000000;
+  text-align: center;
 }
 
-.tutorial p {
+.tutorial-item p {
+  width: 100%;
   color: aliceblue;
   text-shadow: 2px 2px 4px #000000;
 }
