--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -12,12 +12,11 @@
     <link rel="stylesheet" href="/libs/glide/glide.core.min.css" />
     <link rel="stylesheet" href="/libs/glide/glide.theme.min.css" />
   </head>
-  {{>navBar}}
   <body>
-    {{{body}}}
+    {{>navBar}}
+    <main>
+      {{{body}}}
+    </main>
+    {{>footer}}
   </body>
-
-  {{>footer}}
-
-   <link rel="stylesheet" href="/stylesheets/style.css" />
 </html>
