--- a/views/login-form.hbs
+++ b/views/login-form.hbs
@@ -1,4 +1,5 @@
-<span>Login</span>
+<h2>Login</h2>
+
 <form action='/users/login' method='post'>
 
   <label for='username'>Username:</label>
@@ -16,4 +17,8 @@
   />
 
   <button type='submit'>Login</button>
+  <div>
+    <a href='signup' class='btn marginTop'>Sign up instead</a>
+  </div>
+
 </form>
