--- a/views/partials/navBar.hbs
+++ b/views/partials/navBar.hbs
@@ -1,11 +1,12 @@
 <nav>
-  <nav class="nav-wrapper">
-    <a href="#" class="brand-logo right">MEMETICS</a>
-    <ul id="nav-mobile" class="left hide-on-med-and-down">
-      <li><a href="/">Home</a></li>
+  <nav class='nav-wrapper'>
+    <a href='#' class='brand-logo right'>MEMETICS</a>
+    <ul id='nav-mobile' class='left hide-on-med-and-down'>
+      <li><a href='/'>Home</a></li>
       {{! pendiente condicional }}
-      <li><a href="/users/login">Log In/Log Out</a></li>
-      <li><a href="/users/profile">Name</a></li>
+      <li><a href='/users/login'>Log In</a></li>
+      <li><a href='/users/signup'>Signup</a></li>
+      <li><a href='/users/profile'>User Profile</a></li>
     </ul>
   </nav>
 </nav>
