login-signup-logout

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,6 +1,5 @@
 
-<html>
-
+<!DOCTYPE html>
 <html lang="en">
 
   <head>
@@ -15,14 +14,16 @@
 
 
   <body>
-    {{>navBar}}
+    
+    {{> navBar}}
     <div>
     {{{body}}}
     </div>
-      {{>footer}}
+      {{> footer}}
   </body>
 
 
 
    <link rel="stylesheet" href="/stylesheets/style.css" />
 </html>
+
