--- a/views/partials/navBar.hbs
+++ b/views/partials/navBar.hbs
@@ -1,12 +1,22 @@
-<nav>
-  <nav class='nav-wrapper'>
-    <a href='#' class='brand-logo right'>MEMETICS</a>
-    <ul id='nav-mobile' class='left hide-on-med-and-down'>
-      <li><a href='/'>Home</a></li>
-      {{! pendiente condicional }}
-      <li><a href='/users/login'>Log In</a></li>
-      <li><a href='/users/signup'>Signup</a></li>
-      <li><a href='/users/profile'>User Profile</a></li>
-    </ul>
-  </nav>
+<nav class='nav-wrapper'>
+  <a href='#' class='brand-logo right'>MEMETICS</a>
+  <ul id='nav-mobile' class='left hide-on-med-and-down'>
+    <li>
+      <a href='/'>Home</a>
+    </li>
+    {{! pendiente condicional }}
+    <li>
+      <a href='/users/login'>Log In</a>
+    </li>
+    <li>
+      <a href='/users/signup'>Signup</a>
+    </li>
+    <li>
+      <a href='/users/profile'>User Profile</a>
+    </li>
+    <form id='logout-form' action='/logout' method='POST'>
+      <button>Logout</button>
+    </form>
+
+  </ul>
 </nav>
