text changes on index hbs

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,72 +1,72 @@
 {{!-- <h1>{{title}}</h1> --}}
 
-<header class="logo-index">
+<header class='logo-index'>
   <h3>Welcome to</h3>
-  <img src="/images/MEMETICS LOGO.png" />
+  <img src='/images/MEMETICS LOGO.png' />
 </header>
 
 <!-- https://glidejs.com/docs/options/ -->
-<div class="glide">
-  <div data-glide-el="track" class="glide__track">
-    <ul class="glide__slides">
-      <li class="glide__slide">
+<div class='glide'>
+  <div data-glide-el='track' class='glide__track'>
+    <ul class='glide__slides'>
+      <li class='glide__slide'>
         <img
-          src="https://images.unsplash.com/photo-1547987922-84cb5d854c26?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1856&q=80"
+          src='https://images.unsplash.com/photo-1547987922-84cb5d854c26?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1856&q=80'
         />
       </li>
-      <li class="glide__slide">
+      <li class='glide__slide'>
         <img
-          src="https://images.unsplash.com/photo-1593642634443-44adaa06623a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1450&q=80"
+          src='https://images.unsplash.com/photo-1593642634443-44adaa06623a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1450&q=80'
         />
       </li>
-      <li class="glide__slide">
+      <li class='glide__slide'>
         <img
-          src="https://images.unsplash.com/photo-1637355322607-ba6dc27c5080?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=928&q=80"
+          src='https://images.unsplash.com/photo-1637355322607-ba6dc27c5080?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=928&q=80'
         />
       </li>
-      <li class="glide__slide">
+      <li class='glide__slide'>
         <img
-          src="https://images.unsplash.com/photo-1633113087607-bbd9d4b6449a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80"
+          src='https://images.unsplash.com/photo-1633113087607-bbd9d4b6449a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80'
         />
       </li>
-      <li class="glide__slide">
+      <li class='glide__slide'>
         <img
-          src="https://images.unsplash.com/photo-1637298229921-b482651ac572?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80"
+          src='https://images.unsplash.com/photo-1637298229921-b482651ac572?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80'
         />
       </li>
     </ul>
   </div>
 
-  <div class="glide__arrows" data-glide-el="controls">
+  <div class='glide__arrows' data-glide-el='controls'>
     <button
-      class="glide__arrow glide__arrow--left"
-      data-glide-dir="<"
+      class='glide__arrow glide__arrow--left'
+      data-glide-dir='<'
     >prev</button>
     <button
-      class="glide__arrow glide__arrow--right"
-      data-glide-dir=">"
+      class='glide__arrow glide__arrow--right'
+      data-glide-dir='>'
     >next</button>
   </div>
-  <div class="glide__bullets" data-glide-el="controls[nav]">
-    <button class="glide__bullet" data-glide-dir="=0"></button>
-    <button class="glide__bullet" data-glide-dir="=1"></button>
-    <button class="glide__bullet" data-glide-dir="=2"></button>
+  <div class='glide__bullets' data-glide-el='controls[nav]'>
+    <button class='glide__bullet' data-glide-dir='=0'></button>
+    <button class='glide__bullet' data-glide-dir='=1'></button>
+    <button class='glide__bullet' data-glide-dir='=2'></button>
   </div>
 </div>
 
-<section class="tutorial">
-  <h2>How do a meme</h2>
-  <div class="tutorial-item">
-    <p>Select meme image of <a href="link meme list">Meme List</a></p>
-    <img src="/images/2021-11-20.png" />
+<section class='tutorial'>
+  <h2>Create your own Meme!</h2>
+  <div class='tutorial-item'>
+    <p>Select meme image of <a href='link meme list'>Meme List</a></p>
+    <img src='/images/2021-11-20.png' />
   </div>
-  <div class="tutorial-item">
+  <div class='tutorial-item'>
     <p>Edit text and save your meme</p>
-    <img src="/images/2021-11-20 (3).png" />
+    <img src='/images/2021-11-20 (3).png' />
   </div>
-  <div class="tutorial-item">
+  <div class='tutorial-item'>
     <p>Download and share your meme</p>
-    <img src="/images/2021-11-20 (4).png" />
+    <img src='/images/2021-11-20 (4).png' />
   </div>
 </section>
 
@@ -78,5 +78,5 @@
 {{/each}}
 </ul> --}}
 
-<script src="/libs/glide/glide.min.js"></script>
-<script src="/scripts/index.js"></script>
+<script src='/libs/glide/glide.min.js'></script>
+<script src='/scripts/index.js'></script>
