--- a/views/partials/navBar.hbs
+++ b/views/partials/navBar.hbs
@@ -21,7 +21,7 @@
     <li>
       <a class="nav-profile" href="/users/profile" title="Profile">N</a>
       </li>
-     <form id='logout-form' action='/logout' method='POST'>
+     <form id='logout-form' action='/users/logout' method='POST'>
       <button>Logout</button>
     </form>
 
