--- a/views/meme-update.hbs
+++ b/views/meme-update.hbs
@@ -1,10 +1,11 @@
+<h1>UPDATE YOUR MEME!</h1>
 <img src='{{url}}' />
 <form action='/memes/update/{{id}}' method='POST'>
-   
-    <label for='text0'>Insert text0</label>
-    <input type='text' name='text0'  />
-    <label for='text1'>Insert text1</label>
-    <input type='text' name='text1' />
 
-    <button type='submit'>Update Meme!</button>
+  <label for='text0'>Insert text0</label>
+  <input type='text' name='text0' />
+  <label for='text1'>Insert text1</label>
+  <input type='text' name='text1' />
+
+  <button type='submit'>Update Meme!</button>
 </form>
