--- a/views/partials/navBar.hbs
+++ b/views/partials/navBar.hbs
@@ -12,18 +12,17 @@
   
   <ul id="nav-mobile" class="left hide-on-med-and-down">
     {{! pendiente condicional }}
-     <li>
+     <li class="nav-links-item">
       <a href='/users/signup'>Signup</a>
     </li>
-    <li>
+    <li class="nav-links-item">
       <a href="/users/login" title="Login">Log In</a>
       </li>
     <li>
       <a class="nav-profile" href="/users/profile" title="Profile">N</a>
       </li>
-     <form id='logout-form' action='/users/logout' method='POST'>
+     {{!-- <li id='logout-form' action='/users/logout' method='POST'>
       <button>Logout</button>
-    </form>
-
+    </li> --}}
   </ul>
 </nav>
