before conditional navbar

--- a/views/login-form.hbs
+++ b/views/login-form.hbs
@@ -1,7 +1,7 @@
 <div>
   <h2>Login</h2>
 
-  <form action='/users/login' method='post'>
+  <form action='/users/login' method='POST'>
 
     <label for='username'>Username:</label>
     <input required type='text' name='email' placeholder='type your username' />
@@ -28,3 +28,5 @@
 
   </form>
 </div>
+
+isAnonimus = true
