--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,11 +1,11 @@
 body {
   font: 14px 'Lucida Grande', Helvetica, Arial, sans-serif;
-  background-image: url('/images/photo-1563223566-f731efbdbab0.jpeg');
+  /* background-image: url('/images/photo-1563223566-f731efbdbab0.jpeg');
   background-position: center center;
   background-repeat: no-repeat;
-  background-attachment: fixed;
+  background-attachment: fixed; */
   background-size: cover;
-  /* background-color: #464646; */
+  background-color: #464646;
   padding: 0;
   margin: 0;
 }
