Arreglado condicional nav y crud finalizado

--- a/views/meme-create.hbs
+++ b/views/meme-create.hbs
@@ -1,5 +1,5 @@
-<img src='{{url}}' />
-<form action='/memes/create/{{id}}' method='POST'>
+<img src='{{one.url}}' />
+<form action='/memes/create/{{one.id}}' method='POST'>
   <label for='text0'>Insert text0</label>
   <input type='text' name='text0' />
   <label for='text1'>Insert text1</label>
