--- a/views/meme-update.hbs
+++ b/views/meme-update.hbs
@@ -1,6 +1,6 @@
 <h1>UPDATE YOUR MEME!</h1>
-<img src='{{url}}' />
-<form action='/memes/update/{{id}}' method='POST'>
+<img src='{{memeToBeUpdated.url}}' />
+<form action='/memes/update/{{memeToBeUpdated.id}}' method='POST'>
 
   <label for='text0'>Insert text0</label>
   <input type='text' name='text0' value="{{text.[0]}}" />
