--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -238,7 +238,7 @@ nav > ul > li > a {
   margin: auto;
   margin-top: 100px;
   border-radius: 4px;
-  font-family: 'calibri';
+  font-family: "calibri";
   color: white;
   box-shadow: 7px 13px 37px #000;
 }
@@ -255,7 +255,7 @@ nav > ul > li > a {
   border-radius: 4px;
   margin-bottom: 16px;
   border: 1px solid #1f53c5;
-  font-family: 'calibri';
+  font-family: "calibri";
   font-size: 18px;
   color: white;
 }
