--- a/views/user-profile.hbs
+++ b/views/user-profile.hbs
@@ -4,11 +4,12 @@
   <h2>Welcome, {{userInSession.username}}!</h2>
   <p>This is your profile page!</p>
   {{#each findMemes}}
-  <a href="/memes/update/{{_id}}"><img src="{{url}}"></a>
+    <a href="/memes/update/{{_id}}"><img src="{{url}}" /></a>
   {{/each}}
-  <button>
-    <a href='user-profile'>Reload the page</a>
-  </button>
+  <div>
+    <a href="user-profile">Reload the page</a>
+  </div>
+
 {{else}}
   <p>Still no logged in user, sorry!</p>
 {{/if}}
