--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -230,13 +230,19 @@ nav > ul > li > a {
   background-color: #4095c6;
 }
 
+/* Profile */
+.profile {
+  margin-bottom: 28em;
+}
+
 /*log in & sign in*/
 .form-register {
   width: 400px;
   background: #24303c;
   padding: 30px;
   margin: auto;
-  margin-top: 100px;
+  margin-top: 50px;
+  margin-bottom: 50px;
   border-radius: 4px;
   font-family: "calibri";
   color: white;
@@ -285,4 +291,9 @@ nav > ul > li > a {
   color: white;
   margin: 16px 0;
   font-size: 16px;
+}
+
+/* Error */
+.error {
+  margin-bottom: 10em;
 }
