--- a/views/meme-finished.hbs
+++ b/views/meme-finished.hbs
@@ -1,12 +1,7 @@
 {{#each getAll}}
-<div>
+<div class="{{_id}}">
     <img src="{{url}}">
     <span>User: {{owner.username}}</span>
     <span><a href="/memes/finished/{{_id}}">Favourite</a>
-    <h1> fav id: {{favId}}</h1>
-    {{#if (areEquals owner._id favId)}}
-    <span>asdadsadsds{{error}}</span>
-    {{/if}}
-    </span><span>{{error}}</span>
 </div>
 {{/each}}
