--- a/views/meme-list.hbs
+++ b/views/meme-list.hbs
@@ -5,7 +5,7 @@
       <div class="mt-box">
         <div class="mt-title">{{name}}</div>
         <div class="mt-img-wrap"><a href="/memes/create/{{id}}"><img src="{{url}}" /></a></div>
-        <div class="mt-caption"><a href="/memes/create/{{id}}">Add Caption</a></div>
+        {{!-- <div class="mt-caption"><a href="/memes/create/{{id}}">Add Caption</a></div> --}}
       </div>
     {{/each}}
   </div>
