--- a/views/user-profile.hbs
+++ b/views/user-profile.hbs
@@ -7,10 +7,12 @@
     {{#each findMemes}}
       <a href="/memes/update/{{_id}}"><img src="{{url}}" /></a>
     {{/each}}
-    <div>
+    {{! <div>
       <a href="user-profile">Reload the page</a>
-    </div>
-
+    </div> }}
+    <form id="logout-form" action="/users/logout" method="POST">
+      <button>Logout</button>
+    </form>
   {{else}}
     <p>Still no logged in user, sorry!</p>
   {{/if}}
