--- a/views/meme-finished.hbs
+++ b/views/meme-finished.hbs
@@ -2,6 +2,6 @@
 <div class="{{_id}}">
     <img src="{{url}}">
     <span>User: {{owner.username}}</span>
-    <span><a href="/memes/finished/{{_id}}">Favourite</a>
+    <span><a href="/memes/community/{{_id}}">Favourite</a>
 </div>
 {{/each}}
