--- a/views/meme-result.hbs
+++ b/views/meme-result.hbs
@@ -1,1 +1,17 @@
-<img src="{{img}}">
+<h1 class="title-memes">BRAVO! MERAVIGLIOSO!</h1>
+<div class="meme-results">
+  <div class="mt-boxes">
+    <div class="mt-title"><img src="{{img}}" /></div>
+    <div>
+      <h2>Left click for download</h2>
+      <div class="button-edit">
+        <button>
+          <a href="/memes/update/{{_id}}">Edit!</a>
+        </button>
+        <button>
+          <a href="/memes/delete/{{_id}}">Delete!</a>
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
