--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,7 @@
+html,
 body {
-  font: 14px 'Lucida Grande', Helvetica, Arial, sans-serif;
-  background-image: url('/images/photo-1563223566-f731efbdbab0.jpeg');
+  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background-image: url("/images/photo-1563223566-f731efbdbab0.jpeg");
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -8,6 +9,7 @@ body {
   background-color: #464646;
   padding: 0;
   margin: 0;
+  height: 100%;
 }
 
 button {
@@ -19,10 +21,10 @@ button {
   border-radius: 2em;
   box-sizing: border-box;
   text-decoration: none;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 300;
   color: #ffffff;
-  background-color: #4eb5f1;
+  background-color: rgba(200, 0, 0, 0.8);
   transition: all 0.2s;
 }
 
@@ -90,6 +92,7 @@ nav > ul > li > a {
   font-weight: bold;
   text-decoration: underline;
 }
+
 .nav-profile {
   width: 16px;
   height: 16px;
@@ -113,6 +116,11 @@ nav > ul > li > a {
   box-shadow: 0px 0px 10px 0px hsl(0deg 0% 100% / 80%);
 }
 
+#nav-mobile {
+  display: inline-block;
+}
+
+/* Home Page */
 .logo-index {
   display: flex;
   flex-direction: column;
@@ -177,9 +185,11 @@ nav > ul > li > a {
 /* FOOTER */
 .footer-basic {
   width: auto;
-  padding: 5%;
+  padding: 3%;
   background-color: #1b1b1b;
   color: #4b4c4d;
+  position: sticky;
+  top: 100vh;
 }
 
 .footer-basic .copyright {
@@ -225,6 +235,14 @@ nav > ul > li > a {
   padding: 1em 0em;
 }
 
+.mt-boxes img{
+  max-width: 90%;
+  display: block;
+  margin: auto;
+  border-radius: 8px;
+  box-shadow: 2px 2px 15px 0px rgba(0, 0, 0, 0.87);
+}
+
 .mt-box img {
   max-width: 90%;
   display: block;
@@ -254,7 +272,7 @@ nav > ul > li > a {
   border-radius: 2em;
   box-sizing: border-box;
   text-decoration: none;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 300;
   color: #ffffff;
   background-color: #4eb5f1;
@@ -266,9 +284,60 @@ nav > ul > li > a {
   box-shadow: 0px 0px 10px 0px hsl(0deg 0% 100% / 80%);
 }
 
+/* Meme Results*/
+.meme-results {
+  width: 80%;
+  margin-left: 10%;
+  margin-right: 10%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: stretch;
+}
+
+.meme-results h2 {
+  color: #444444;
+  text-shadow: 1px 0px 1px #cccccc, 0px 1px 1px #eeeeee, 2px 1px 1px #cccccc,
+    1px 2px 1px #eeeeee, 3px 2px 1px #cccccc, 2px 3px 1px #eeeeee,
+    4px 3px 1px #cccccc, 3px 4px 1px #eeeeee, 5px 4px 1px #cccccc,
+    4px 5px 1px #eeeeee, 6px 5px 1px #cccccc, 5px 6px 1px #eeeeee,
+    7px 6px 1px #cccccc;
+}
+
+.button-edit {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.button-edit button {
+  font-size: 2em;
+}
+
+/* Update Meme */
+.meme-text {
+  padding-bottom: 1em;
+  color: #000;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
 /* Profile */
 .profile {
-  margin-bottom: 28em;
+  font-size: 2em;
+  margin-left: 2%;
+  margin-right: 2%;
+  margin-bottom: 5%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.profile button {
+  font-size: 0.6em;
 }
 
 /*log in & sign in*/
@@ -280,7 +349,7 @@ nav > ul > li > a {
   margin-top: 50px;
   margin-bottom: 50px;
   border-radius: 4px;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   color: white;
   box-shadow: 7px 13px 37px #000;
 }
@@ -298,7 +367,7 @@ nav > ul > li > a {
   margin-bottom: 16px;
   border: 1px solid #c51f1f;
   /* border: 1px solid #1f53c5; */
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 18px;
   color: white;
 }
