--- a/views/meme-update+2.hbs
+++ b/views/meme-update+2.hbs
@@ -1,10 +1,17 @@
-<img src='{{memeToBeUpdated.url}}' />
-<form action='/memes/update/{{memeToBeUpdated.id}}' method='POST'>
-  
-    {{#each memeToBeUpdated.text}} 
-        <label for='text'>Insert text</label>
-        <input type='text' name='text' value={{this}} />
-    {{/each}}
-
-    <button type='submit'>Update Meme!</button>
-</form>
+<h1 class="title-memes">UPDATE YOUR MEME!</h1>
+<div class="mt-boxes">
+  <div class="mt-img-wrap">
+    <img src="{{memeToBeUpdated.url}}" />
+  </div>
+  <form action="/memes/update/{{memeToBeUpdated.id}}" method="POST">
+    <div class="meme-text">
+      {{#each memeToBeUpdated.text}}
+        <div>
+          <label for="text">Insert text</label>
+          <input type="text" name="text" value={{this}} />
+        </div>
+      {{/each}}
+    </div>
+    <button type="submit">Update Meme!</button>
+  </form>
+</div>
