--- a/views/partials/logNav.hbs
+++ b/views/partials/logNav.hbs
@@ -1,24 +1,23 @@
-<a href='#' class='brand-logo right'>MEMETICS</a>
-
-<ul class='nav-links'>
-  <li class='nav-links-item'>
-    <a href='/' title='Home'>Home</a>
+<ul>
+  <li class="nav-links-item">
+    <a href="/" title="Home">Home</a>
   </li>
-  <li class='nav-links-item'>
-    <a href='/memes' title='Meme List∫'>Meme List</a>
+
+  <li class="nav-links-item">
+    <a href="/memes" title="Meme List∫">Meme List</a>
   </li>
 </ul>
 
-<ul id='nav-mobile' class='left hide-on-med-and-down'>
+<ul id="nav-mobile" class="left hide-on-med-and-down">
+  <li><form id="logout-form" action="/users/logout" method="POST">
+      <button>Logout</button>
+    </form>
+  </li>
   <li>
     <a
-      class='nav-profile'
-      href='/users/user-profile'
-      title='Profile'
+      class="nav-profile"
+      href="/users/user-profile"
+      title="Profile"
     >{{userName}}</a>
   </li>
-  <form id='logout-form' action='/users/logout' method='POST'>
-    <button>Logout</button>
-    <span> | </span>
-  </form>
 </ul>
