--- a/views/index.hbs
+++ b/views/index.hbs
@@ -9,31 +9,11 @@
 <div class='glide'>
   <div data-glide-el='track' class='glide__track'>
     <ul class='glide__slides'>
-      <li class='glide__slide'>
-        <img
-          src='https://images.unsplash.com/photo-1547987922-84cb5d854c26?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1856&q=80'
-        />
-      </li>
-      <li class='glide__slide'>
-        <img
-          src='https://images.unsplash.com/photo-1593642634443-44adaa06623a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1450&q=80'
-        />
-      </li>
-      <li class='glide__slide'>
-        <img
-          src='https://images.unsplash.com/photo-1637355322607-ba6dc27c5080?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=928&q=80'
-        />
-      </li>
-      <li class='glide__slide'>
-        <img
-          src='https://images.unsplash.com/photo-1633113087607-bbd9d4b6449a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80'
-        />
-      </li>
-      <li class='glide__slide'>
-        <img
-          src='https://images.unsplash.com/photo-1637298229921-b482651ac572?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80'
-        />
-      </li>
+      {{#each fewMemes}}
+
+        <li class='glide__slide'> <img src='{{url}}' /></li>
+
+      {{/each}}
     </ul>
   </div>
 
@@ -52,6 +32,7 @@
     <button class='glide__bullet' data-glide-dir='=1'></button>
     <button class='glide__bullet' data-glide-dir='=2'></button>
   </div>
+
 </div>
 
 <section class='tutorial'>
