--- a/views/meme-create.hbs
+++ b/views/meme-create.hbs
@@ -1,19 +1,8 @@
-<h1 class="title-memes">UPDATE YOUR MEME!</h1>
-<div class="mt-boxes">
-  <div class="mt-img-wrap">
-    <img src="{{memeToBeUpdated.url}}" />
-  </div>
-  <form action="/memes/update/{{memeToBeUpdated.id}}" method="POST">
-    <div class="meme-text">
-      <div>
-        <label for="text0">Insert text0</label>
-        <input type="text" name="text0" />
-      </div>
-      <div>
-        <label for="text1">Insert text1</label>
-        <input type="text" name="text1" />
-      </div>
-    </div>
-    <button type="submit">Update Meme!</button>
-  </form>
-</div>
+<img src='{{one.url}}' />
+<form action='/memes/create/{{one.id}}' method='POST'>
+  <label for='text0'>Insert text0</label>
+  <input type='text' name='text0' />
+  <label for='text1'>Insert text1</label>
+  <input type='text' name='text1' />
+  <button type='submit'>Create Meme</button>
+</form>
