--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,12 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+
 html,
 body {
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  background-image: url("/images/photo-1563223566-f731efbdbab0.jpeg");
+  font-family: 'Poppins', sans-serif;
+  font-size: 0.9rem;
+  background-image: url('/images/photo-1563223566-f731efbdbab0.jpeg');
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
   background-color: #464646;
+  font-weight: 300;
   padding: 0;
   margin: 0;
   height: 100%;
@@ -21,7 +25,7 @@ button {
   border-radius: 2em;
   box-sizing: border-box;
   text-decoration: none;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-weight: 300;
   color: #ffffff;
   background-color: rgba(200, 0, 0, 0.8);
@@ -203,7 +207,10 @@ nav > ul > li > a {
 /* Meme List */
 .title-memes {
   text-align: center;
-  text-shadow: #000000 3px 3px;
+  text-shadow: 0px 0px 24px rgba(0, 0, 0, 1);
+  font-weight: 700;
+  font-size: 1.9rem;
+  letter-spacing: 2px;
 }
 
 .mt-boxes {
@@ -217,7 +224,7 @@ nav > ul > li > a {
   margin: 0 auto;
   gap: 3em;
   justify-content: center;
-  background-color: #fefefebb;
+  background-color: #fefefe5b;
 }
 
 .mt-box {
@@ -235,7 +242,7 @@ nav > ul > li > a {
   padding: 1em 0em;
 }
 
-.mt-boxes img{
+.mt-boxes img {
   max-width: 90%;
   display: block;
   margin: auto;
@@ -272,7 +279,7 @@ nav > ul > li > a {
   border-radius: 2em;
   box-sizing: border-box;
   text-decoration: none;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-weight: 300;
   color: #ffffff;
   background-color: #4eb5f1;
@@ -349,7 +356,7 @@ nav > ul > li > a {
   margin-top: 50px;
   margin-bottom: 50px;
   border-radius: 4px;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   color: white;
   box-shadow: 7px 13px 37px #000;
 }
@@ -367,7 +374,7 @@ nav > ul > li > a {
   margin-bottom: 16px;
   border: 1px solid #c51f1f;
   /* border: 1px solid #1f53c5; */
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 18px;
   color: white;
 }
