--- a/views/meme-finished.hbs
+++ b/views/meme-finished.hbs
@@ -1,13 +1,13 @@
-<h1 class="title-memes">SEE THE OTHER MEME OF COMUNITY!</h1>
-<div class="mt-boxes">
+<h1 class='title-memes'>CHECK OUT THE MOST POPULAR MEMES!</h1>
+<div class='mt-boxes'>
   {{#each getAll}}
-    <div class="mt-box">
-      <div class="{{_id}}">
-        <div class="mt-img-wrap"><img src="{{url}}" /></div>
-        <div class="mt-title">
+    <div class='mt-box'>
+      <div class='{{_id}}'>
+        <div class='mt-img-wrap'><img src='{{url}}' /></div>
+        <div class='mt-title'>
           <span>User: {{owner.username}}</span>
-          <div class="mt-caption"><a
-              href="/memes/finished/{{_id}}"
+          <div class='mt-caption'><a
+              href='/memes/finished/{{_id}}'
             >Favourite</a></div>
         </div>
       </div>
