--- a/views/partials/guestNav.hbs
+++ b/views/partials/guestNav.hbs
@@ -6,6 +6,10 @@
   <li class='nav-links-item'>
     <a href='/memes' title='Meme List∫'>Meme List</a>
   </li>
+
+  <li class='nav-links-item'>
+    <a href='/memes/community' title='Meme List∫'>Top Meme</a>
+  </li>
 </ul>
 
 <ul id='nav-mobile' class='left hide-on-med-and-down'>
