--- a/views/index.hbs
+++ b/views/index.hbs
@@ -36,19 +36,8 @@
 </div>
 
 <section class='tutorial'>
-  <h1 class='jt --debug'>
-    <span class='jt__row'>
-      <span class='jt__text'>Create your own meme!</span>
-    </span>
-    <span class='jt__row jt__row--sibling' aria-hidden='true'>
-      <span class='jt__text'>Create your own meme!</span>
-    </span>
-    <span class='jt__row jt__row--sibling' aria-hidden='true'>
-      <span class='jt__text'>Create your own meme!</span>
-    </span>
-    <span class='jt__row jt__row--sibling' aria-hidden='true'>
-      <span class='jt__text'>Create your own meme!</span>
-    </span>
+  <h1>
+    Create your own meme!
   </h1>
   <div class='tutorial-item'>
     <p>Select meme image of <a href='link meme list'>Meme List</a></p>
