--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,8 +1,7 @@
 {{!-- <h1>{{title}}</h1> --}}
 
 <header class='logo-index'>
-  <h3>Welcome to</h3>
-  <img src='/images/MEMETICS LOGO.png' />
+  <img id='logo' src='/images/MEMETICS LOGO.png' />
 </header>
 
 <!-- https://glidejs.com/docs/options/ -->
