--- a/views/partials/logNav.hbs
+++ b/views/partials/logNav.hbs
@@ -4,11 +4,11 @@
   </li>
 
   <li class='nav-links-item'>
-    <a href='/memes' title='Meme List∫'>Meme List</a>
+    <a href='/memes' title='Meme List∫'>Templates</a>
   </li>
 
   <li class='nav-links-item'>
-    <a href='/memes/community' title='Meme List∫'>Top Meme</a>
+    <a href='/memes/community' title='Meme List∫'>Top Memes</a>
   </li>
 
 </ul>
