--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,10 +2,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
 
-* {
-  box-sizing: border-box;
-}
-
 html,
 body {
   font-family: 'Poppins', sans-serif;
@@ -88,6 +84,11 @@ nav > ul > li > a {
   text-decoration: none;
 }
 
+h1 {
+  font-size: 1.7rem;
+  text-shadow: 2px 2px 4px #000000;
+}
+
 .nav-links {
   background: none;
 }
@@ -136,6 +137,10 @@ nav > ul > li > a {
   flex-direction: column;
   align-items: center;
   margin-top: -20px;
+}
+
+#logo {
+  height: 7rem;
 }
 
 .logo-index h3 {
@@ -214,9 +219,9 @@ nav > ul > li > a {
 /* Meme List */
 .title-memes {
   text-align: center;
-  text-shadow: 0px 0px 24px rgba(0, 0, 0, 1);
+  text-shadow: 2px 2px 4px #000000;
   font-weight: 700;
-  font-size: 1.9rem;
+  font-size: 2.2rem;
   letter-spacing: 2px;
 }
 
@@ -273,8 +278,9 @@ nav > ul > li > a {
 .mt-title {
   color: #000000;
   text-align: center;
-  font-size: 1em;
+  font-size: 1.2em;
   max-width: 100%;
+  text-shadow: 1px 1px 3px #4e4e4e;
 }
 
 .mt-caption {
