--- a/views/meme-list.hbs
+++ b/views/meme-list.hbs
@@ -1,10 +1,12 @@
-<h1 class="title-memes">LIST OF MEMES</h1>
-<div id="mt-boxes-rap" class="inbox">
-  <div class="mt-boxes">
+<h1 class='title-memes'>MEME TEMPLATES</h1>
+<div id='mt-boxes-rap' class='inbox'>
+  <div class='mt-boxes'>
     {{#each allMemes}}
-      <div class="mt-box">
-        <div class="mt-title">{{name}}</div>
-        <div class="mt-img-wrap"><a href="/memes/create/{{id}}"><img src="{{url}}" /></a></div>
+      <div class='mt-box'>
+        <div class='mt-title'>{{name}}</div>
+        <div class='mt-img-wrap'><a href='/memes/create/{{id}}'><img
+              src='{{url}}'
+            /></a></div>
         {{!-- <div class="mt-caption"><a href="/memes/create/{{id}}">Add Caption</a></div> --}}
       </div>
     {{/each}}
